# ROS2-manipulator-viz-tool

./: .clang-format  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/workflows/: colcon_build.yml  pylint.yml  test_build.yml
src/bartending_cobot_bringup/: package.xml
src/bartending_cobot_bringup/config/: manipulator_controllers.yaml
src/bartending_cobot_bringup/launch/: r6bot.launch.py
src/bartending_cobot_description/: CMakeLists.txt
src/bartending_cobot_description/urdf/: bartending_cobot.xacro.urdf
src/manipulator_bringup/: CMakeLists.txt  Todo.md  package.xml
src/manipulator_bringup/config/: manipulator_controllers.yaml
src/manipulator_bringup/launch/: ur5e_demo.launch.py
src/manipulator_viz_core/: package.xml  setup.py
src/manipulator_viz_core/manipulator_viz_core/: publisher.py  subscriber.py
src/manipulator_viz_core/test/: _test_copyright.py  _test_flake8.py  test_publisher.py
src/manipulator_viz_plugin/: package.xml  rviz_common_plugins.xml
